<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            app:titleTextColor="@color/white"
            app:title="@string/today_s_weather"
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noDataFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_data_found"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/loadingProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/noInternet"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/no_internet_image"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:strokeColor="@color/white"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/homePagePadding">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="City Name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="60sp"
                        tools:text="22" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/degreeTypeTop"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:paddingTop="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="\u2103" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:useDefaultMargins="false"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card"
            tools:visibility="visible">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/homePagePadding">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/windTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mbCardTitle"
                        android:text="@string/windTitle"
                        tools:text="@string/windTitle" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/windText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="12 km/h" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/homePagePadding">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/humidityTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mbCardTitle"
                        android:text="@string/humidityTitle"
                        tools:text="@string/humidityTitle" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/humidityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="60%" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/homePagePadding">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/rainTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mbCardTitle"
                        android:text="@string/rainTitle"
                        tools:text="@string/rainTitle" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/rainText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="heavily raining" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/homePagePadding">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/feelsLikeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mbCardTitle"
                        android:text="@string/feelsLikeTitle"
                        tools:text="@string/feelsLikeTitle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/feelsLikeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="30" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/degreeTypeGrid"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="top"
                            android:paddingTop="1dp"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            tools:text="\u2103" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
